Table Customer{
  customer_id INTEGER [primary key]
  first_name VARCHAR(50) [not null]
  last_name VARCHAR(50) [not null]
  address VARCHAR(100) [not null]
  email VARCHAR(255) [not null, unique]
}

TABLE Order{
  order_id INTEGER [primary key]
  customer_id INTEGER [not null, ref: > Customer.customer_id]
  order_date DATE [not null]
}

TABLE OrderLine{
  orderline_id INTEGER [primary key]
  order_id INTEGER [not null, ref: > Order.order_id]
  product_id INTEGER [not null, ref: > Product.product_id]

}

Table Product{
  product_id INTEGER [primary key]
  name VARCHAR(50) [not null]
  price INTEGER [not null]

}